public/css/ddstyle.css
body,
html {
  height: 100%;
}

body {
  font-family: 'Ubuntu';
  color: white;
}

.dd-navbar {
  position: fixed;
  top: 0;
  display: flex;
  width: 100%;
  z-index: 1;
}

.dd-navbar-mobile {
  display: none;
}

.dd-navbar ul.dd-navbar-list {
  display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
  height: 128px;
  padding: 0;
  box-sizing: border-box;
  margin: 0;
}

.dd-navbar ul li {
  list-style: none;
  padding: 1em 2.5em;
}

.dd-navbar ul li a {
  color: white;
}

img.dd-logo {
  width: 75px;
  margin: 0;
}

.dd-header {
  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
  width: 100%;
  height: 100vh;
  text-align: center;
  padding: 2em 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-weight: lighter;
}

.dd-header::before {
  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
  background-image: url('/public/images/sparkles-2.gif');
  background-repeat: repeat;
  opacity: 0.3;
  position: absolute;
  z-index: 0;
  content: ' ';
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.dd-container {
  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
  min-height: 100%;
  color: #1b2735;
  display: flex;
  justify-content: center;
  background-size: cover;
  background-position: bottom;
  background-attachment: fixed;
}

.dd-container::before {
  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
  background-image: url('/public/images/sparkles-2.gif');
  opacity: 0.3;
  position: fixed;
  z-index: 0;
  content: ' ';
  top: 0;
  left: 0;
  width: 100%;
  min-height: 100%;
}

.dd-container-page {
  display: flex;
  padding: 0 128px;
  margin-top: 128px;
  width: 75vw;
  min-height: 100%;
  background-color: white;
  z-index: 1;
  flex-direction: column;
  border-radius: 10px 10px 0 0;
}

.dd-page {
  padding: 2em 0;
  display: flex;
  flex-direction: column;
  width: 100%;
}

.dd-page-date {
  margin: 0;
  text-align: center;
}

.dd-page-title-container {
  display: flex;
  flex-direction: column;
  padding: 0;
  margin: 0 0 1em 0;
}

.dd-page-title {
  padding-bottom: 1em;
  text-align: center;
  font-size: 36px;
  text-transform: capitalize;
}

.dd-page-title-container .dd-page-title {
  padding: 0;
}

.dd-header h1 {
  font-size: 112px;
  font-weight: 100;
  color: white;
  z-index: 1;
  letter-spacing: 20px;
}

.dd-subtitle {
  font-size: 36px;
  z-index: 1;
  letter-spacing: 10px;
  line-height: 1.5;
  padding: 1em 0;
  width: 50vw;
}

.dd-footer {
  padding: 1em 2em;
  position: absolute;
  display: flex;
  bottom: 0;
}

.dd-copyright {
  opacity: 0.6;
}

.dd-action-button {
  border: 1px solid #1b2735;
  color: #1b2735;
  background-color: white;
  padding: .5em 1em;
}

.dd-audio {
  margin: 2em 0;
}

@media (max-height : 675px) {
  .dd-header h1 {
    font-size: 56px;
    letter-spacing: 10px;
  }

  .dd-subtitle {
    font-size: 24px;
    letter-spacing: 0;
    line-height: 1.5;
    padding: 1em 0;
    width: 75vw;
  }
}

@media (min-width : 375px) and (max-width : 667px) {
  .dd-header h1 {
    font-size: 36px;
    letter-spacing: 10px;
  }

  .dd-subtitle {
    font-size: 18px;
    z-index: 1;
    letter-spacing: 0;
    line-height: 1.5;
    padding: 1em 0;
    width: 75vw;
  }

  .dd-navbar {
    display: none;
    justify-content: end;
    width: 50vw;
    right: 0;
    padding-top: 128px;
    background-color: #5c376d;
    z-index: 2;
  }

  .dd-navbar.active {
    display: block;
  }

  .dd-navbar-mobile {
    position: fixed;
    display: block;
    z-index: 1;
    width: 100vw;
  }

  .dd-navbar-mobile a {
    position: absolute;
    padding: 1em;
    left: 1em;
  }

  .dd-navbar-mobile button {
    position: absolute;
    right: 2em;
    top: 1.5em;
  }

  .dd-navbar-mobile button#dd-close-button,
  .dd-navbar-mobile button#dd-open-button {
    display: none;
  }

  .dd-navbar-mobile button#dd-close-button.active,
  .dd-navbar-mobile button#dd-open-button.active {
    display: block;
  }

  .dd-navbar ul.dd-navbar-list {
    flex-direction: column;
    height: 100vh;
    width: 50vw;
    align-items: flex-end;
    justify-content: start;
  }

  .dd-navbar-item.dd-main {
    display: none;
  }

  .dd-container-page {
    padding: 0 2em;
    width: 100%;
    margin: 128px 2em 0 2em;
  }

  .dd-page {
    padding: 1em 0;
  }

  .dd-page-title {
    padding: 1em 0;
  }
}

.dd-revista-image {
  margin: 2em 0;
}

.dd-revista-info {
  text-align: center;
}

.dd-revista-container {
  display: flex;
  flex-direction: column;
}

.dd-revista-content {
  padding: 2em 0;
}

.dd-revista-posts {
  display: flex;
  margin: 2em 0;
  align-items: center;
  justify-content: center;
}

.book-container {
  display: flex;
  align-items: center;
  justify-content: center;
  perspective: 400px;
}

@keyframes initAnimation {
  0% {
    transform: rotateY(-9deg);
  }
  100% {
    transform: rotateY(-34deg);
  }
}

.book {
  width: 175px;
  height: 275px;
  position: relative;
  transform-style: preserve-3d;
  transform: rotateY(-34deg);
  transition: 1s ease;
  animation: 1s ease 0s 1 initAnimation;
}

.book-container:hover .book, 
.book-container:focus .book {
  transform: rotateY(-9deg);
}

.book > :first-child {
  position: absolute;
  top: 0;
  left: 0;
  background-color: red;
  width: 175px;
  height: 275px;
  transform: translateZ(5px);
  background-color: #01060f;
  border-radius: 0 0px 0px 0;
  box-shadow: 5px 5px 20px #666;
}

.book::before {
  position: absolute;
  content: ' ';
  background-color: blue;
  left: 0;
  top: 2px;
  width: 8px;
  height: 271px;
  transform: translateX(168px) rotateY(90deg);
  background: linear-gradient(90deg, 
    #fff 0%,
    #f9f9f9 5%,
    #fff 10%,
    #f9f9f9 15%,
    #fff 20%,
    #f9f9f9 25%,
    #fff 30%,
    #f9f9f9 35%,
    #fff 40%,
    #f9f9f9 45%,
    #fff 50%,
    #f9f9f9 55%,
    #fff 60%,
    #f9f9f9 65%,
    #fff 70%,
    #f9f9f9 75%,
    #fff 80%,
    #f9f9f9 85%,
    #fff 90%,
    #f9f9f9 95%,
    #fff 100%
    );
}

.book::after {
  position: absolute;
  top: 0;
  left: 0;
  content: ' ';
  width: 175px;
  height: 275px;
  transform: translateZ(-5px);
  background-color: #01060f;
  border-radius: 0 0px 0px 0;
  box-shadow: -10px 0 50px 10px #666;
}

